# NumPy_ML

./: README.md  mnist_demo.ipynb  pyproject.toml
numpy_ml/: __init__.py  _exceptions.py  _numpy_f32_constants.py  parameter.py
numpy_ml/_typealiases/: __init__.py  _numpy_datatypes.py  padding.py  shapes.py  tensors.py
numpy_ml/criterions/: __init__.py  cross_entropy.py
numpy_ml/data_handlers/: __init__.py  mini_batcher.py
numpy_ml/eval/: __init__.py  confusion_matrix.py
numpy_ml/initialisers/: __init__.py  initialiser.py  kaiming_norm.py  ones.py  standard_norm.py  xavier_norm.py  zeroes.py
numpy_ml/layers/: __init__.py  _utils_convpool.py  conv2d.py  dense.py  layer.py  leaky_relu.py  relu.py  relu6.py  reshape.py  sigmoid.py  softmax.py
numpy_ml/networks/: __init__.py  _utils.py  neural_network.py  sequential.py
numpy_ml/optimisers/: __init__.py  adam.py  optimiser.py  sgd.py
