[project]
name = "numpy-ml"
version = "1.0.0"
description = "A purely numpy-based rudimentary machine-learning project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
